--- a/albumy.ipynb
+++ b/albumy.ipynb
@@ -2918,7 +2918,7 @@
    "outputs": [],
    "source": [
     "#Zadanie 10\n",
-    "df.to_excel('albumy_wszechczasow.xlsx', sheet_name='Lista Official Charts')"
+    "df.to_csv('albumy_wszechczasow.csv')"
    ]
   },
   {
